src/front/styles/parents.css
#profile {
  width: 180px;
  height: 160px;
  border-radius: 50%;
  margin-left: 10%;
}

#bio {
  margin-top: 20px;
  margin-left: 170px;
  width: 480px;
  height: 200px;
}

#form {
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: medium;
}
#dropdown-button-example1 {
  background-color: white;
  color: black;
}
#button {
  display: block;
  margin-left: 40%;
}

